--- a/css/inicio.css
+++ b/css/inicio.css
@@ -64,9 +64,10 @@
     .inicio-card{
         width: 352px;
         height: 367px;
+        padding: 2.5rem;
     }
     .inicio-card2 img {
-    width: 230px
+    width: 270px
     }
     .inicio-card2-description p{
     margin-bottom: 15px;
@@ -77,25 +78,21 @@
     width: 6rem;
     height: 3rem;
     margin-top: 10px;
-    font-size: 12px;
+    font-size: 15px;
+    padding: 8px;
     }
 
 }
 
 @media (max-width: 820px){
-    /* =====================================
-    =               aca tengo que hacer el nuevo navbar                =
-    ===================================== */
-    
     .inicio-main{
-        gap: 1rem;
+        gap: 0rem;
         grid-template-areas: 
         "inicio-card2"
         "inicio-card1"
         ;
+        height: 840px;
+        
     }
-    .inicio-main{
-    height: 800px;
-    }
-    
+
 }
