--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,22 +1,27 @@
 h1{
     font-size: 3rem;
+    text-align: center;
+    font-weight: bold;
 }
 p{
     font-size: 1.5rem;
 }
 .card1{
+    text-align: center;
+    width: 60rem;
+}
+.contenedor-description{
     display: flex;
     justify-content: center;
-    margin-bottom: 3rem;
+    padding: 1rem;
 }
-
-.description{
-    width: 40rem;
-
+.contenedor-title{
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    
 }
-
-
-
 .carruzel{
     display: flex;
     justify-content: space-evenly;
@@ -24,4 +29,19 @@ p{
 
 .img{
     width: 20rem;
+}
+
+@media (max-width: 1170px){
+   h1{
+    font-size: 33px;
+   }
+   .description{
+    font-size: 17px;
+   }
+   .contenedor-title{
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+    margin-bottom: 0px;
+}
 }
