--- a/css/pedidos.css
+++ b/css/pedidos.css
@@ -1,23 +1,35 @@
 .container{
     display: flex;
-    justify-content: center;
+    justify-content:center;
     column-gap: 5rem;
-    
+    align-items: center;
+    height: 45rem;
+    width: 100%;
+    display: grid;
+    grid-template-areas: "card1 carruzel";
 }
 
-.carruzel img{
-    width: 29rem;
-   
+.carousel-item img{
+    height: 450px;
+    width: 430px;
+}
+.carruzel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-area: carruzel;
+}
+
+.card1{
+    grid-area: card1;
 }
 
 .card{
     background-color: white;
     padding: 3rem;
-    width: 35rem;
-}
-
-.card2 button{
-    margin-top: 3rem;
+    width: 528px;
+    height: 550px;
+    border-radius: 1rem;
 }
 
 .card1 p{
@@ -26,6 +38,7 @@
 }
 h2{
     font-size: 2.2rem;
+    font-weight: bold;
 }
 li{
     margin-left: 2.2rem;
@@ -40,19 +53,53 @@ button {
     border-radius:5px; 
     cursor:pointer; 
     font-size:1.2rem;
+    margin-top: 1rem
 }
 
-.fijo{
-    display: flex;
-    align-items: center;
-    position: fixed;
-    bottom: 1rem;
-    right: 1rem;
+@media (max-width: 1200px){
+.card{
+    padding: 1.6rem;
+    width: 352px;
+    height: 367px;
+}
+.carousel-item img{
+    height: 300px;
+}
+
+.card1 p{
+    font-size:16px;
+    margin-bottom: 0.4rem;
+    text-align: center;
+}
+
+h2{
+    font-size: 1.7rem;
+    font-weight: bold;
+    margin-left: 1rem;
+}
+li{
+    margin-left: 1.6rem;
+    font-size: 1.2rem;
+}
+
+button {
     background-color: #25D366; 
     color:white; 
-    padding:10px; 
+    padding: 7px 20px; 
     border:none; 
     border-radius:5px; 
     cursor:pointer; 
-    font-size:1.2rem;
+    font-size:1rem;
+    margin-top: 0rem 
+}
+
+}
+
+@media (max-width: 820px){
+    .container{
+        grid-template-areas: "card1" "carruzel";
+        height: 55rem;
+        gap: 0rem;
+        height: 840px;    
+    }
 }
