--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,9 @@ a{
 .contents-footer{
 margin-top: 1rem;
 }
+.contents-footer p{
+    font-size: 1rem;
+}
 
 .logos-footer{
     display: flex;
@@ -108,6 +111,10 @@ margin-top: 1rem;
 @media (max-width: 820px){
     .inicio-footer{
     height: 590px;
+}
+.navbar-brand {
+    gap: 10px;
+    
 }
 
     .footer{
