--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,8 +1,3 @@
-/* =====================================
-=               Inicio                =
-===================================== */
-
-
 .inicio-main-1{
     display: flex;
    justify-content: center;
@@ -13,7 +8,7 @@
     display: flex;
     column-gap: 5rem;
     justify-content: center;
-    height: 700px;
+    height: 670px;
     align-items: center;
     display: grid;
     grid-template-areas: " inicio-card1 inicio-card2";
@@ -38,7 +33,7 @@
     width: 25rem;
 }
 
-.button{
+.inicio-card2-button{
  width: 9rem;
  background-color: rgb(10, 197, 211);
  padding: 1rem;
@@ -74,7 +69,7 @@
     font-size: 20px;
     }
     
-    .button{
+    .inicio-card2-button{
     width: 6rem;
     height: 3rem;
     margin-top: 10px;
