--- a/scss/_pedidos.scss
+++ b/scss/_pedidos.scss
@@ -1,4 +1,4 @@
-.container{
+.pedidos-main-container{
     display: flex;
     justify-content:center;
     column-gap: 5rem;
@@ -9,22 +9,23 @@
     grid-template-areas: "card1 carruzel";
 }
 
-.carousel-item img{
+.pedidos-carrusel img{
     height: 450px;
     width: 430px;
 }
-.carruzel{
+.pedidos-main-carrusel{
     display: flex;
     align-items: center;
     justify-content: center;
     grid-area: carruzel;
+    
 }
 
-.card1{
+.pedidos-main-card1{
     grid-area: card1;
 }
 
-.card{
+.pedidos-main-card{
     background-color: white;
     padding: 3rem;
     width: 528px;
@@ -32,20 +33,22 @@
     border-radius: 1rem;
 }
 
-.card1 p{
+.pedidos-main-card1 p{
     font-size: 1.3rem;
     margin-bottom: 1.5rem;
 }
-h2{
+
+.pedidos-main-card2 h2{
     font-size: 2.2rem;
     font-weight: bold;
 }
-li{
+
+.pedidos-main-card2 li{
     margin-left: 2.2rem;
     font-size: 1.7rem;
 }
 
-button {
+.pedidos-main-card2 button {
     background-color: #25D366; 
     color:white; 
     padding:10px 20px; 
@@ -56,33 +59,7 @@ button {
     margin-top: 1rem
 }
 
-@media (max-width: 1200px){
-.card{
-    padding: 1.6rem;
-    width: 352px;
-    height: 367px;
-}
-.carousel-item img{
-    height: 300px;
-}
-
-.card1 p{
-    font-size:16px;
-    margin-bottom: 0.4rem;
-    text-align: center;
-}
-
-h2{
-    font-size: 1.7rem;
-    font-weight: bold;
-    margin-left: 1rem;
-}
-li{
-    margin-left: 1.6rem;
-    font-size: 1.2rem;
-}
-
-button {
+.pedidos-main-card2 button {
     background-color: #25D366; 
     color:white; 
     padding: 7px 20px; 
@@ -93,10 +70,35 @@ button {
     margin-top: 0rem 
 }
 
+@media (max-width: 1200px){
+.pedidos-main-card{
+    padding: 1.6rem;
+    width: 352px;
+    height: 367px;
+}
+.pedidos-carrusel img{
+    height: 300px;
+    
 }
 
+.pedidos-main-card1 p{
+    font-size:16px;
+    margin-bottom: 0.4rem;
+    text-align: center;
+}
+
+.pedidos-main-card2 h2{
+    font-size: 1.7rem;
+    font-weight: bold;
+    margin-left: 1rem;
+}
+.pedidos-main-card2 li{
+    margin-left: 1.6rem;
+    font-size: 1.2rem;
+}
+}
 @media (max-width: 820px){
-    .container{
+    .pedidos-main-container{
         grid-template-areas: "card1" "carruzel";
         height: 55rem;
         gap: 0rem;
