--- a/scss/_ubicacion.scss
+++ b/scss/_ubicacion.scss
@@ -1,6 +1,4 @@
-
-
-h1{
+.ubicacion-h1{
     display: flex;
     font-weight: bold;
     justify-content: center;
@@ -11,25 +9,23 @@ h1{
     
 }
 
-.container{
+.ubicaion-main-container{
     display: flex;
-    justify-content: center;
-    column-gap: 5rem
-
-}
-.container-1{
     display: grid;
     grid-template-areas: "card-1 card-2";
-
+    justify-content: center;
+    column-gap: 5rem
+    
 }
-.card-1{
+
+.ubicacion-card-1{
     grid-area: card-1;
 }
-.card-2{
+.ubicacion-card-2{
     grid-area: card-2;
 }
 
-.card{
+.ubicacion-card{
     background-color: rgb(255, 255, 255);
     padding: 4rem;
     width: 528px;
@@ -37,80 +33,79 @@ h1{
     border-radius: 1rem;
 }
 
-.ubi{
+.ubicacion-card-1-calle{
     font-size: 1.7rem;
     font-weight: bold;
-    margin-top: 2rem;
+    margin-top: 15px;
 }
 
-h2{
+.ubicacion-card-2-horarios{
     display: flex;
     justify-content: center;
     font-size: 3rem
 }
-.dias {
+.ubicacion-card-2-dias {
     width: 25rem;
     display: flex;
     justify-content: center;
     font-size: 1.8rem;
 }
 
-.dias1{
-    margin-bottom: 1.5rem;
-}
-.horarios{
+.ubicacion-card-2-franjahoraria{
     display: flex;
     justify-content: center;
     
 }
 
-.negrita{
+.ubicacion-card-2-negrita{
     font-weight: bold;
 }
 
-.inicio-footer{
+.ubicacion-footer{
     margin-top: 4rem;
 }
 
 
 @media (max-width: 1200px){
-    .card{
+    .ubicaion-main-container{
+        height: 26rem;
+    }
+    
+    .ubicacion-card{
     padding: 2.5rem;
     width: 352px;
     height: 367px;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
-    .card iframe{
+    .ubicacion-card iframe{
         width: 270px;
+        height: 250px;
     }
-    .ubi{
+    .ubicacion-card-1-calle{
     font-size: 20PX;
+    margin-top: 10px;
 
 }
-    .card h2 {
+    .ubicacion-card h2 {
         font-size: 30px;
     }
-    .dias{
+    .ubicacion-card-2-dias{
         font-size: 23px;
         margin-bottom: 0px;
     }
-    .dias1{
-    margin-bottom: 0px;
-}
-
 }
 
 @media (max-width: 820px){
-    .container-1{
+    .ubicaion-main-container{
     gap: 0rem;
     grid-template-areas: 
     "card-2" 
     "card-1";
 }
-    .card-1{
+    .ubicacion-card-1{
         margin-bottom: 0rem;
     }
-    h1{
+    .ubicacion-h1{
         font-size: 2.3rem;
         margin-bottom: 1.5rem;
         margin-top: 1.5rem;
