--- a/scss/_ubicacion.scss
+++ b/scss/_ubicacion.scss
@@ -9,7 +9,7 @@
     
 }
 
-.ubicaion-main-container{
+.ubicacion-main-container{
     display: flex;
     display: grid;
     grid-template-areas: "card-1 card-2";
@@ -67,7 +67,7 @@
 
 
 @media (max-width: 1200px){
-    .ubicaion-main-container{
+    .ubicacion-main-container{
         height: 26rem;
     }
     
@@ -96,17 +96,18 @@
 }
 
 @media (max-width: 820px){
-    .ubicaion-main-container{
+    .ubicacion-main-container{
     gap: 0rem;
     grid-template-areas: 
     "card-2" 
     "card-1";
+    height: 46rem;
 }
     .ubicacion-card-1{
         margin-bottom: 0rem;
     }
     .ubicacion-h1{
-        font-size: 2.3rem;
+        font-size: 2.1rem;
         margin-bottom: 1.5rem;
         margin-top: 1.5rem;
     }
