--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -15,7 +15,8 @@
 }
 body {
     font-family: 'Times New Roman', Times, serif;
-    background-color: rgb(236, 168, 200);
+    
+    background-color: #efcad1;
 }
 
 @media (max-width: 820px){
